--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: glk-api
+Source: glk-headers
 Section: libdevel
 Priority: extra
 Maintainer: Christoph Ender <christoph.ender@spellbreaker.org>
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9.0.0)
 Standards-Version: 4.0.0
 Homepage: http://www.eblong.com/zarf/glk/
 
-Package: glk-api-dev
+Package: glk-headers-dev
 Architecture: any
 Depends: ${misc:Depends}
 Description: Header files for development based on the GLK API.
